--- a/app/index.html
+++ b/app/index.html
@@ -24,11 +24,18 @@
 
 </div>
 </body>
+<script src="/socket.io/socket.io.js"></script>
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-route/angular-route.js"></script>
+<script src="lib/moment/moment.js"></script>
+<script src="lib/moment/locale/zh-cn.js"></script>
+<script src="lib/angular-moment/angular-moment.js"></script>
 <script src="/app.js"></script>
 <script src="/controller/LoginCtrl.js"></script>
 <script src="/controller/RoomsCtrl.js"></script>
+<script src="/controller/RoomCtrl.js"></script>
+<script src="/directive/ctrlEnterBreakLine.js"></script>
+<script src="/service/socket.js"></script>
 </html>
